peering.tf
resource "aws_vpc_peering_connection" "peer" {
  vpc_id      = aws_vpc.test_vpc.id
  peer_vpc_id = aws_vpc.prod_vpc.id
  auto_accept = true
}
